--- a/week9-react-app/package.json
+++ b/week9-react-app/package.json
@@ -15,6 +15,7 @@
     "react-navi": "^0.14.4",
     "react-request-hook": "^2.1.1",
     "react-scripts": "4.0.3",
+    "serve": "^13.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
